<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_news_images"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                >





            </android.support.v4.view.ViewPager>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_publication_logo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:src="@drawable/img_publication_logo_placeholder"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/news_details_publication_logo_bottom"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    />

                <TextView
                    android:id="@+id/tv_publication_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eleven Media"
                    android:layout_toRightOf="@id/iv_publication_logo"
                    android:layout_alignTop="@id/iv_publication_logo"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:shadowColor="@color/black_full"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    />

                <TextView
                    android:id="@+id/tv_published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posted At : Jan 01 - 6:30AM"
                    android:layout_below="@id/tv_publication_name"
                    android:layout_alignLeft="@id/tv_publication_name"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">



            </android.support.v7.widget.Toolbar>



        </android.support.design.widget.CollapsingToolbarLayout>




    </android.support.design.widget.AppBarLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="right|bottom"
        android:layout_margin="@dimen/margin_medium"/>



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="@dimen/margin_xxxlarge"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



            <TextView
                android:id="@+id/tv_news_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_news_details"
                android:layout_margin="@dimen/margin_medium"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/lbl_related_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_news"
                android:layout_below="@id/tv_news_details"
                android:textColor="@color/black_full"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_related_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_related_news"
                android:layout_margin="@dimen/margin_medium"
                >



            </android.support.v7.widget.RecyclerView>



        </RelativeLayout>




    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_news_details_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:padding="@dimen/margin_medium_2"
        android:weightSum="5"
        >


        <TextView
            android:id="@+id/btn_comment_newss"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_large_size"
            android:layout_weight="3"
            android:text="@string/btn_comment_news"
            android:paddingLeft="@dimen/margin_xxlarge"
            android:paddingRight="@dimen/margin_xxlarge"
            style="@style/AccentBorderButton"
            android:drawableLeft="@drawable/ic_chat_bubble_outline_24dp"
            android:gravity="center"
            android:layout_marginRight="@dimen/margin_large"

            />

        <TextView
            android:id="@+id/btn_share_newss"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/btn_large_size"
            android:text="@string/btn_share_news"
            android:paddingLeft="@dimen/margin_large"
            android:paddingRight="@dimen/margin_large"
            style="@style/AccentButton"
            android:drawableLeft="@drawable/ic_share_24dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/margin_medium_2"
            />




    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>